--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital@0;1&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;1,100;1,300&display=swap");
 
 :root {
-  --primary: #85d9ff;
+  --primary: #c9eeff;
   --secondary: #1fb9ff;
+  --tertiary: #85d9ff;
 }
 
 *,
@@ -21,5 +22,21 @@ body {
 
   @media screen and (min-width: 900px) {
     font-size: 56.25%;
+  }
+}
+
+body {
+  &::-webkit-scrollbar {
+    display: none;
+    // width: 16px;
+
+    // &-track {
+    //   background-color: #e4e4e4;
+    //   border-radius: 100px;
+    // }
+    // &-thumb {
+    //   background-color: #d4aa70;
+    //   border-radius: 100px;
+    // }
   }
 }
